--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Dualingo</string>
-    <string name="name">Number</string>
+    <string name="name">Numbers</string>
     <string name="Family">Family</string>
     <string name="colors">Colors</string>
     <string name="Phrases">Phrases</string>
